<resources>
    <string name="app_name">Comic Nexus</string>

    <string name="nav_drawer_tagline">For All Fans Of Marvel Comics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="series_search_hint">Search Marvel Series</string>
    <string name="free">Free</string>
    <string name="price_on_gridview">&#36;%.2f</string>

    <!-- Widget Items -->
    <string name="widget_issue_number">Issue #: %1$d</string>
    <string name="widget_page_count">Page Count: %1$d</string>
    <string name="widget_price_detail">Price: &#36;%.2f</string>

    <!-- Search Result string -->
    <string name="type_of_comic">Type: %1$s</string>
    <string name="start_year">Start Year: %1$d</string>

    <string name="this_week_comics">This Week</string>
    <string name="next_week_comics">Next Week</string>



    <!-- Sharing Hashtag -->
    <string name="hashtag">#ComicNexus</string>


    <!-- Nav Drawer Items -->
    <string name="nav_search_header">Marvel Comics Resources</string>
    <string name="nav_buy_local_header">Buy Comics Locally</string>
    <string name="nav_this_week">This Weeks Comics</string>
    <string name="nav_next_week">Next Weeks Comics</string>
    <string name="nav_search_series">Search For A Series</string>
    <string name="nav_marvel_wiki">Official Marvel Wiki</string>
    <string name="nav_unofficial_wikia">Unofficial Marvel Wikia</string>
    <string name="nav_find_store">Find Comic Stores Near Me</string>


    <!-- Detail View Categories -->
    <string name="detail_title_header">Title</string>
    <string name="detail_sale_date_header">On Sale Date</string>
    <string name="detail_issue_number_header">Issue #</string>
    <string name="detail_pages_header">Pages</string>
    <string name="detail_price_header">Price</string>
    <string name="detail_creators_header">Creators</string>
    <string name="detail_description_header">Description</string>
    <string name="detail_find_store">Find a comic store near me</string>
    <string name="detail_view_at_marvel">View and Buy on Marvel.com</string>
    <string name="detail_share_comic">Share this comic</string>

    <!-- A11y strings -->
    <string name="a11y_cover">%1$s .  Price &#36;%2$.2f</string>
    <string name="a11y_description_view">%1$s . On Sale %2$s , %3$s . Price &#36;%4$.2f</string>


    <!-- Error Messages -->
    <string name="error_get_response">Could Not Update - Please check your internet connection</string>
    <string name="widget_empty_error">No Comics to Display</string>
    <string name="unavailable">Unavailable</string>


    <!-- Legal Attribution -->
    <string name="marvel_legal_attribution">Data provided by Marvel. © 2016 MARVEL</string>

</resources>
