<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_this_week_comics"
            android:icon="@drawable/ic_import_contacts_black_24dp"
            android:title="@string/nav_this_week"
            />
        <item
            android:id="@+id/nav_next_week_comics"
            android:icon="@drawable/ic_import_contacts_black_24dp"
            android:title="@string/nav_next_week" />


    <item android:title="@string/nav_search_header">
            <menu>
                <item
                    android:id="@+id/nav_search_series"
                    android:icon="@drawable/ic_search_black_24dp"
                    android:title="@string/nav_search_series" />

                <item
                    android:id="@+id/nav_official_wiki"
                    android:icon="@drawable/ic_library_books_black_24dp"
                    android:title="@string/nav_marvel_wiki" />

                <item
                    android:id="@+id/nav_fan_wikia"
                    android:icon="@drawable/ic_library_books_black_24dp"
                    android:title="@string/nav_unofficial_wikia" />
                </menu>
    </item>



<item android:title="@string/nav_buy_local_header">
    <menu>
    <item
        android:id="@+id/nav_find_store"
        android:icon="@drawable/ic_place_black_24dp"
        android:title="@string/nav_find_store" />
    </menu>
    </item>

    </group>

    <!--<menu android:titleCondensed="@string/marvel_legal_attribution" />-->


</menu>
