<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorText"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/detail_comic_cover"
            android:layout_width="230dp"
            android:layout_height="345dp"
            android:layout_gravity="top|left|start"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorText"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DetailHeaders"
                android:text="@string/detail_sale_date_header"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detail_release_day"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detail_release_week"
                android:gravity="center_horizontal"
                android:layout_marginBottom="@dimen/detail_item_margin"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DetailHeaders"
                android:text="@string/detail_issue_number_header"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detail_issue_number"
                android:gravity="center_horizontal"
                android:layout_marginBottom="@dimen/detail_item_margin"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DetailHeaders"
                android:text="@string/detail_pages_header"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detail_page_number"
                android:gravity="center_horizontal"
                android:layout_marginBottom="@dimen/detail_item_margin"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DetailHeaders"
                android:text="@string/detail_price_header"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detail_price"
                android:gravity="center"
                />

        </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DetailHeaders"
            android:text="@string/detail_title_header"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detail_title"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/detail_item_margin"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DetailHeaders"
            android:text="@string/detail_description_header"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detail_description"
            android:padding="@dimen/detail_description_padding"
            android:layout_marginBottom="@dimen/detail_item_margin"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DetailHeaders"
            android:text="@string/detail_creators_header"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_creator_linearlayout"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DetailButton"
            android:layout_marginTop="@dimen/detail_button_margin"
            android:id="@+id/detail_button_find_store"
            android:text="@string/detail_find_store"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DetailButton"
            android:id="@+id/detail_button_view_site"
            android:text="@string/detail_view_at_marvel"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detail_button_share"
            style="@style/DetailButton"
            android:text="@string/detail_share_comic"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_item_margin"
            android:gravity="center_horizontal"
            android:text="@string/marvel_legal_attribution"
            />

        </LinearLayout>

    </LinearLayout>

    </ScrollView>
